--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-header></app-header>
+<!-- <app-header></app-header> -->
+<app-login></app-login>
+<!-- <app-signup></app-signup> -->
+<!-- <app-success></app-success> -->
+<!-- <app-forgot-password></app-forgot-password> -->
+
+<!-- <app-institute-signup></app-institute-signup> -->
