--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,6 +9,8 @@ $background-gray: #F2F2F2;
 $content-gray: #BFBFBF;
 $color-gray: #7F7F7F;
 $color-gray-dark: #404040;
-/////////////////// defaults //////////////////
+$color-white: #fff;
+//////////////////////////////////// defaults //////////////////
 $default-margin: 13px;
-$flex-padding : 1.5rem 1rem 3.5rem 1rem;
+$flex-padding: 1.5rem 1rem 3.5rem 1rem;
+$border-radius: 7px;
