--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,4 @@
-@import "../../variables";
+@import "../../scss/variables";
 mat-toolbar {
     background-color: $color-green !important;
     margin: 0;
@@ -46,4 +46,5 @@ mat-sidenav-container {
 
 mat-sidenav-content {
     padding: $default-margin;
+    background-color: $background-gray;
 }
